feat: full skill parsing
first commit