@@ -5,10 +5,10 @@ import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.UserMessage;
 import net.osgiliath.acplanggraphlangchainbridge.langgraph.message.ResourceLinkContent;
-import net.osgiliath.codeprompt.skills.acp.AttachmentMetadataDTO;
-import net.osgiliath.codeprompt.skills.acp.AttachmentFiltererFromMetadata;
-import net.osgiliath.codeprompt.skills.acp.AttachmentsMetadata;
-import net.osgiliath.codeprompt.langgraph.state.CodingPromptState;
+import net.osgiliath.acplanggraphlangchainbridge.langgraph.node.attachment.AttachmentMetadataDTO;
+import net.osgiliath.acplanggraphlangchainbridge.langgraph.node.attachment.AttachmentsMetadata;
+import net.osgiliath.acplanggraphlangchainbridge.langgraph.state.AcpState;
+import net.osgiliath.codeprompt.skills.attachment.AttachmentFiltererFromMetadata;
 import org.bsc.langgraph4j.action.NodeAction;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -20,7 +20,7 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Component
-public class AttachmentFilterNode implements NodeAction<CodingPromptState> {
+public class AttachmentFilterNode implements NodeAction<AcpState<ChatMessage>> {
     private static final Logger log = LoggerFactory.getLogger(AttachmentFilterNode.class);
     private final AttachmentFiltererFromMetadata selector;
 
@@ -29,12 +29,15 @@ public class AttachmentFilterNode implements NodeAction<CodingPromptState> {
     }
 
     @Override
-    public Map<String, Object> apply(CodingPromptState state) {
-        log.debug("Filtering metadata for question: {} with attachments: {}", state.messages(), state.attachmentsMetadata());
-        
+    public Map<String, Object> apply(AcpState<ChatMessage> state) {
+        log.debug("Filtering metadata for session {} question: {} with attachments: {}",
+                state.sessionId(),
+                state.messages(),
+                state.attachmentsMetadata());
+
         String combinedMessages = state.messages().stream()
-            .map(this::extractText)
-            .collect(Collectors.joining("\n"));
+                .map(this::extractText)
+                .collect(Collectors.joining("\n"));
 
         AttachmentsMetadata response = selector.chat(
                 combinedMessages,
@@ -44,10 +47,10 @@ public class AttachmentFilterNode implements NodeAction<CodingPromptState> {
         List<ResourceLinkContent> filtered = response.attachments().stream()
                 .map(dto -> findOriginal(dto, state.attachmentsMetadata()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         return Map.of(
-                CodingPromptState.ATTACHMENTS_META, filtered
+                AcpState.ATTACHMENTS_META, filtered
         );
     }
 
